# relay-operator-app

./: .gitignore  CLA.md  LICENSE  Outline_NOSTR_ID_030125.docx  PRIVACY_POLICY.md  README.md  README.md.save  README.md.save.1  README.md.save.2  RELAY_IS_NOT_A_MONEY_TRANSMITTER.md  REWARDS.md  WHY_NO_BLOSSOM.md  WHY_NO_CACHE.md  index.html  latest.json  package-lock.json  package.json  relay_app.py  setup-binaries.sh  setup-relay.sh
.github/workflows/: build.yml
docs/: index.html
frontend/: index.html
frontend/src/: main.js  style.css
installer/: build_linux_deb.sh  build_mac_dmg.sh  build_win_exe.bat  relay_app.spec
relay-fix/: index.html  package-lock.json  package.json  tauri.conf.json  tauri.config.json  tauri.config.ts
src/: App.jsx  index.css  index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/relay-data/: config.toml
src-tauri/src/: lib.rs  main.rs
